plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.acme'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	set('springCloudVersion', '2023.0.1')
}
ext['spring-pulsar.version'] = '1.1.0-SNAPSHOT'

dependencies {
	implementation "org.springframework.cloud:spring-cloud-stream-binder-pulsar"
	implementation "org.springframework.boot:spring-boot-starter-pulsar"
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'com.devskiller:jfairy:0.6.5'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
	jvmArgs = [
			"--add-opens", "java.base/java.lang=ALL-UNNAMED",
			"--add-opens", "java.base/java.util=ALL-UNNAMED",
			"--add-opens", "java.base/sun.net=ALL-UNNAMED"
	]
}
